--- a/PawSomeDash/src/components/NavBar.css
+++ b/PawSomeDash/src/components/NavBar.css
@@ -7,5 +7,11 @@
 }
 
 .nav-bar-container {
-    background-color: #FFFFFF !important;
+    display: flex;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    position: fixed;
+    width: 16vw;
 }
